--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -184,7 +184,7 @@
     margin-bottom: 0px;
   }
   #logo {
-    font-family: 'Philosopher', sans-serif;
+    font-family: 'Vidaloka', serif;
   }
   #main-bg {
     width: 100%;
