--- a/views/index.pug
+++ b/views/index.pug
@@ -3,16 +3,17 @@ extends layout
 block content
   div(id="body")
     div(id="splash")
-      h1(class="mainText") Web Design and Development Results
-      br
-      h4(id="randomWord" class="randomWord")
-      br
-      p(id="mainVidh1") Your business is unique, your web strategy should be too
-      br
-      center
-        div(id="mainContact")
-          a(id="mainContactt" href="/messages/contact")
-            h5 Contact Me
+      div(class="container")
+        h1(class="mainText") Web Design and Development Results
+        br
+        h4(id="randomWord" class="randomWord")
+        br
+        p(id="mainVidh1") Your business is unique, your internet strategy should be too
+        br
+        center
+          div(id="mainContact")
+            a(id="mainContactt" href="/messages/contact")
+              h5 Contact Me
   div(id="coursesMain")
     div(class="container")
       div(id="margy")
