--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,8 @@ html(lang="en")
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous")
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
     link(href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet")
-    link(href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet") 
+    link(href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css?family=Vidaloka" rel="stylesheet")
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/mobile.css')
     link(rel='stylesheet', href='/stylesheets/tablet.css')
@@ -22,25 +23,25 @@ html(lang="en")
         div(class="collapse navbar-collapse" id="navbarSupportedContent")
           ul(class="nav nav-fill mr-auto")
               li(class="nav-item")
-                a(class="nav-link" href="/" id="logo")
+                a(class="nav-link" href="/")
                   h5 Home
               li(class="nav-item")
-                a(class="nav-link" href="/static/allservices" id="logo")
+                a(class="nav-link" href="/static/allservices")
                   h5 Services
               li(class="nav-item")
-                a(class="nav-link" href="/static/allcourses" id="logo")
+                a(class="nav-link" href="/static/allcourses")
                   h5 Courses
               li(class="nav-item")
-                a(class="nav-link" href="/static/allprojects" id="logo")
+                a(class="nav-link" href="/static/allprojects")
                   h5 Projects
               li(class="nav-item")
-                a(class="nav-link" href="/static/allblogs" id="logo")
+                a(class="nav-link" href="/static/allblogs")
                   h5 Vlog
               li(class="nav-item")
-                a(class="nav-link" href="/static/gallery" id="logo")
+                a(class="nav-link" href="/static/gallery")
                   h5 Gallery
               li(class="nav-item")
-                a(class="nav-link" href="/messages/contact" id="logo")
+                a(class="nav-link" href="/messages/contact")
                   h5 Contact Me
     block content
     footer
