--- a/public/stylesheets/desktop.css
+++ b/public/stylesheets/desktop.css
@@ -1,5 +1,24 @@
 /* Desktop View */
 @media screen and (min-width: 996px) {
+
+  #body {
+    height: 900px;
+  }
+
+  #biImages {
+    height: 160px;
+    width: 100%;
+  }
+
+  #meMain {
+    height: 850px;
+  }
+
+  #col-sm-6 {
+    width: 25%;
+    float: left;
+  }
+
   #mainContact {
     width: 150px;
     height: 75px;
@@ -51,7 +70,7 @@
 
   #projectImage {
       width: 100%;
-      height: 120px;
+      height: 150px;
   }
 
   #jig {
