--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -1,18 +1,69 @@
 /* Mobile View */
 @media screen and (min-width: 200px) {
 
+  html,body{
+    height:100%;
+  }
+  /*body:before{
+    content:'';
+    height:100%;
+    display:inline-block;
+    vertical-align:middle;
+  }*/
+
   #body {
     width: 100%;
     padding-top: 0%;
-    height: 100vh;
+    height: 750px;
     background-image: url(../images/comp.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    text-align: center;
   }
 
-  #mainContact h5 {
-    margin-top: 10%;
+  #col-sm-6 {
+    width: 50%;
+    float: left;
+  }
+
+  #mainButton{
+    background:#1AAB8A;
+    color:#fff;
+    border:none;
+    position:relative;
+    height:60px;
+    font-size:1.6em;
+    padding:0 2em;
+    cursor:pointer;
+    transition:800ms ease all;
+    outline:none;
+    margin-bottom: 5%;
+  }
+  #mainButton:hover{
+    background:#fff;
+    /*color:#1AAB8A;*/
+    color: black;
+  }
+  #mainButton:before,button:after{
+    content:'';
+    position:absolute;
+    top:0;
+    right:0;
+    height:2px;
+    width:0;
+    background: #1AAB8A;
+    transition:400ms ease all;
+  }
+  #mainButton:after{
+    right:inherit;
+    top:inherit;
+    left:0;
+    bottom:0;
+  }
+  #mainButton:hover:before,button:hover:after{
+    width:100%;
+    transition:800ms ease all;
   }
 
   #fixed {
@@ -109,7 +160,7 @@
   #coursesMain {
     width: 100%;
     padding-top: 10%;
-    height: 100%;
+    height: 800px;
     background-image: url(../images/chat.png);
     background-repeat: no-repeat;
     background-position: center;
@@ -119,7 +170,7 @@
   #servicesMain {
     width: 100%;
     padding-top: 10%;
-    height: 100%;
+    height: 800px;
     background-image: url(../images/web.png);
     background-repeat: no-repeat;
     background-position: center;
@@ -149,7 +200,7 @@
   #meMain {
     width: 100%;
     padding-top: 10%;
-    height: 100%;
+    height: 900px;
     background-image: url(../images/main.png);
     background-repeat: no-repeat;
     background-position: center;
@@ -260,7 +311,7 @@
   }
   #projectImage {
     width: 100%;
-    height: 100%;
+    height: 100px;
   }
   #adminVideoContainer {
     width: 100%;
@@ -359,7 +410,7 @@
     float: left;
   }
   #marg {
-    margin-top: 100px;
+    /*margin-top: 100px;*/
   }
 
 
@@ -454,6 +505,20 @@
     width: 100%;
     height: 150px;
   }
+
+  #col-md-6 {
+    width: 50%;
+    float: left;
+  }
+
+  #col-lg-2 {
+    width: 25%;
+    text-align: center;
+  }
+
+  #social {
+    font-size: 3em;
+  }
 }
 
 
@@ -463,5 +528,10 @@
 @media screen and (min-width: 200px) {
   #mainImages {
     height: 150px;
+  }
+
+  #biImages {
+    height: 100px;
+    width: 100%;
   }
 }
