--- a/views/static/projects.pug
+++ b/views/static/projects.pug
@@ -10,11 +10,11 @@ block content
     div(class="row")
       if (projects.length > 0)
         each project in projects
-          div(class="col col-md-2")
-            a(href=project.linkUrl target="_blank")
-              center
+          div(id="col-sm-6")
+            div(class="card")
+              a(href=project.linkUrl target="_blank")
                 img(src=project.imageUrl id="projectImage")
-              h3(class="text-center" id="text")= project.title
+                h3(class="text-center")= project.title
       else
         h1(class="text-center") No Projects Added Yet
   div(id="marg")
