--- a/views/static/services.pug
+++ b/views/static/services.pug
@@ -9,11 +9,12 @@ block content
     div(class="row")
       if (services.length > 0)
         each service in services
-          div(class="col-md-3")
-            a(href="/static/showservice/" + service.id)
-              center
-                img(src=service.imageUrl id="serviceImage")
-                h3(class="text-center" id="text")=service.title
+          div(id="col-sm-6")
+            div(class="card")
+              img(src=service.imageUrl id="serviceImage")
+              div(class="card-body")
+                h3(class="card-title")=service.title
+                p(class="card-body")=service.description
       else
         h1(class="text-center") No Services Added Yet
   div(id="marg")
