--- a/views/index.pug
+++ b/views/index.pug
@@ -45,7 +45,7 @@ block content
             div(class="col")
               center
                 a(href="/static/showservice/59f37d3ae769b213b8061104" id="bt2")
-                  img(src="https://smejoinup.com/wp-content/uploads/2016/10/web-design-development.jpg" id="biImages")
+                  img(src="https://frcoder.com/wp-content/uploads/2019/05/website-development.jpg" id="biImages")
                   div(id="space")
                   h3 Website Development
             div(class="col")
